<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/navigation_buttons_group">
        <item
            android:id="@+id/home_nav_button"
            android:title="@string/title_activity_main" />
        <item
            android:id="@+id/review_nav_button"
            android:title="@string/action_review" />
        <item
            android:id="@+id/view_verses_nav_button"
            android:title="@string/action_view_verses" />
        <item
            android:id="@+id/add_verses_nav_button"
            android:title="@string/action_add_verses" />
        <item
            android:id="@+id/login_nav_button"
            android:title="@string/action_sign_in" />
        <item
            android:id="@+id/logout_nav_button"
            android:title="@string/action_sign_out" />
    </group>

</menu>