<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context="com.memverse.www.memverse.MainActivity">

    <LinearLayout
        android:id="@+id/mainContentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:layout_marginTop="32dp"
        android:padding="16dp"
        android:background="@color/colorForeground"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/main_loggedOutButtonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/main_loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/colorMainButton"
                android:textColor="@color/colorMainButtonText"
                android:text="@string/action_sign_in_short" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_loggedInButtonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/main_reviewButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/colorMainButton"
                android:textColor="@color/colorMainButtonText"
                android:text="@string/action_review" />

            <Button
                android:id="@+id/main_viewVersesButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/colorMainButton"
                android:textColor="@color/colorMainButtonText"
                android:text="@string/action_view_verses" />


            <Button
                android:id="@+id/main_addVersesButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/colorMainButton"
                android:textColor="@color/colorMainButtonText"
                android:text="@string/action_add_verses" />

            <Button
                android:id="@+id/main_logoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/colorMainButton"
                android:textColor="@color/colorMainButtonText"
                android:text="@string/action_sign_out" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/privacyPolicyLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:text="Privacy" />

</LinearLayout>
