<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context="com.memverse.www.memverse.ViewVersesActivity">

    <ProgressBar
        android:id="@+id/progressSpinner"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="83dp"
        android:layout_height="112dp"
        android:layout_gravity="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mainContentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TableLayout
                android:id="@+id/view_verses_verseTableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:layout_marginTop="32dp"
                android:background="@color/colorForeground"
                android:stretchColumns="0,1,2,3">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorTableHeadingBackground"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_verses_reference_header"
                        android:textColor="@color/colorTableHeadingText"
                        android:textStyle="bold"
                        tools:layout_editor_absoluteX="58dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_verses_status_header"
                        android:textColor="@color/colorTableHeadingText"
                        android:textStyle="bold"
                        tools:layout_editor_absoluteX="174dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_verses_next_test_header"
                        android:textColor="@color/colorTableHeadingText"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_verses_interval_header"
                        android:textColor="@color/colorTableHeadingText"
                        android:textStyle="bold" />

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
