<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.memverse.www.memverse.ViewVersesActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/toolbarWrapper"
                layout="@layout/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/subheading" />

            <TextView
                android:id="@+id/subheading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:paddingRight="32dp"
                android:paddingLeft="48dp"
                android:background="@color/colorSubheading"
                android:textColor="@color/colorSubheadingText"
                android:text="@string/title_activity_view_verses"
                app:layout_constraintBottom_toTopOf="@+id/progress_spinner"
                app:layout_constraintTop_toBottomOf="@+id/toolbarWrapper"
                tools:layout_editor_absoluteX="46dp" />


            <ProgressBar
                android:id="@+id/progress_spinner"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="83dp"
                android:layout_height="112dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subheading"
                app:layout_constraintBottom_toTopOf="@id/main_content" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/main_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:layout_marginTop="32dp"
                android:background="@color/colorForeground"
                android:orientation="vertical"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progress_spinner"
                android:visibility="gone">

                <TableLayout
                    android:id="@+id/view_verses_table"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="0,1,2,3">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorTableHeadingBackground"
                        android:paddingHorizontal="2dp"
                        android:paddingVertical="2dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/view_verses_reference_header"
                            android:textColor="@color/colorTableHeadingText"
                            android:textStyle="bold"
                            tools:layout_editor_absoluteX="58dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/view_verses_status_header"
                            android:textColor="@color/colorTableHeadingText"
                            android:textStyle="bold"
                            tools:layout_editor_absoluteX="174dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/view_verses_next_test_header"
                            android:textColor="@color/colorTableHeadingText"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/view_verses_interval_header"
                            android:textColor="@color/colorTableHeadingText"
                            android:textStyle="bold" />

                    </TableRow>

                </TableLayout>

            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
