<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context="com.memverse.www.memverse.ReviewActivity">

    <ProgressBar
        android:id="@+id/progressSpinner"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="83dp"
        android:layout_height="112dp"
        android:layout_gravity="center" />

    <LinearLayout
        android:id="@+id/mainContentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/review_refHeadingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/review_referenceView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_generic"
                android:textColor="@color/colorReference" />

            <Button
                android:id="@+id/review_rateButton"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/action_rate" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review_show_verse" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/review_showVerseSwitch"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:padding="3dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/review_rateBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/review_rate1"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="1" />
            <Button
                android:id="@+id/review_rate2"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="2" />
            <Button
                android:id="@+id/review_rate3"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="3" />
            <Button
                android:id="@+id/review_rate4"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="4" />
            <Button
                android:id="@+id/review_rate5"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="5" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorForeground"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/review_instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/review_instructions" />

                <TextView
                    android:id="@+id/review_prevVerseFeedbackView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/review_verseFeedbackView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/review_correctFeedbackView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:background="@color/colorCorrectFeedbackBackground"
                    android:paddingBottom="3dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="3dp"
                    android:text="@string/review_feedback_correct"
                    android:textColor="@color/colorCorrectFeedbackText"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/review_verseInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/review_verse_input_prompt"
                    android:inputType="text"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp" />
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>
